--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -16,6 +16,7 @@ form {
     padding: 0.3em;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 0.5em;
 }
 
 input[type="number"],
@@ -34,15 +35,4 @@ input[type="number"] {
     padding: 0.5em;
     border: 1px solid $sec-color;
     font-family: $main-font-family;
-}
-
-button {
-    min-width: 25em;
-    padding: 2em;
-    margin-top: 2em;
-    text-align: center;
-    background-color: $sec-color;
-    color: white;
-    border-radius: 1em;
-    border: 0;
 }
